# Morpheus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  project.clj
config/: log4rs.yaml  neb.yaml  test_server.yaml
doc/: intro.md
scripts/: repeatdly_model_test.sh
src/: main.rs
src/clj/morpheus/: client.clj  core.clj  msl.clj  utils.clj
src/clj/morpheus/algo/: rebuild.clj
src/clj/morpheus/computation/: base.clj  core.clj  data_map.clj  distribute_code.clj  package_compiler.clj  task_container.clj  zip_utils.clj
src/clj/morpheus/integration/: core.clj
src/clj/morpheus/integration/sources/: sitelinks.clj  wikidata.clj
src/clj/morpheus/messaging/: core.clj
src/clj/morpheus/models/: base.clj  core.clj  defined.clj  dynamic.clj
src/clj/morpheus/models/edge/: base.clj  core.clj  defined.clj  directed.clj  dynamic.clj  hyper.clj  indirected.clj  remotes.clj  simple.clj  statistics.clj
src/clj/morpheus/models/verterx/: core.clj
src/clj/morpheus/models/vertex/: base.clj  core.clj  defined.clj  dynamic.clj
src/clj/morpheus/query/: core.clj
src/clj/morpheus/query/lang/: AST.clj  base.clj  core.clj  criteria.clj  evaluation.clj  update.clj
src/clj/morpheus/traversal/: bfs.clj  core.clj  dfs.clj
src/clj/morpheus/traversal/bfs/: rebuild.clj
src/clj/morpheus/traversal/dfs/: mutable.clj  rebuild.clj
src/config/: mod.rs  neb.rs
src/graph/: fields.rs  id_list.rs  mod.rs  test.rs
src/graph/edge/: bilateral.rs  directed.rs  hyper.rs  macros.rs  mod.rs  undirectd.rs
src/graph/vertex/: mod.rs
src/java/org/shisoft/morpheus/: SchemaStore.java  UnzipUtil.java  schemaStore.java
src/model/: mod.rs
src/model/edge/: direct.rs  hyper.rs  indirect.rs  mod.rs
src/model/vertex/: mod.rs
src/morpheus/: core.clj
src/morpheus/models/edge/: core.clj  directed.clj  document.clj  hyper.clj  indirected.clj  simple.clj
src/morpheus/models/verterx/: core.clj
src/query/: mod.rs
src/query/symbols/: mod.rs
src/query/symbols/crud/: cell.rs  edge.rs  mod.rs  vertex.rs
src/server/: mod.rs  schema.rs
src/server/schema/: mod.rs  mod_conflict-20170720-235128.rs  sm.rs
src/tests/: mod.rs
src/tests/graph/: mod.rs
src/utils/: file.rs  mod.rs  transaction.rs
test/morpheus/: core_test.clj  server.clj
test/morpheus/tests/: chained_list.clj  modeling.clj  schema.clj  server.clj  static_performance.clj  traversal.clj
test/morpheus/tests/mql/: lang.clj
(+1 files in other folders)
