[package]
name = "morpheus"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]

[dependencies]
neb = { git = "https://github.com/ShisoftResearch/Nebuchadnezzar", branch = "develop" }
#neb = { path = "../Nebuchadnezzar" }
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
lazy_static = "*"
futures = "0.1"
parking_lot = {version = "0.4", features = ["nightly"]}
serde = "*"
serde_derive = "*"
chashmap = "*"
log = "0.3"
log4rs = "*"
env_logger = "0.3"
yaml-rust = "*"
serde_yaml = "*"