[package]
name = "morpheus"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2021"

[dependencies]
neb = { git = "https://github.com/ShisoftResearch/Nebuchadnezzar", branch = "develop" }
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
lazy_static = "*"
futures = "0.3"
parking_lot = {version = "0.12", features = ["nightly"]}
serde = "*"
serde_derive = "*"
chashmap = "*"
log = "0.4"
log4rs = "*"
env_logger = "0.10"
yaml-rust = "*"
serde_yaml = "*"