[package]
name = "morpheus"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2021"

[dependencies]
neb = { git = "https://github.com/ShisoftResearch/Nebuchadnezzar", branch = "develop" }
bifrost = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_plugins = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
bifrost_hasher = { git = "https://github.com/shisoft/bifrost", branch = "develop" }
dovahkiin = { git = "https://github.com/ShisoftResearch/Dovahkiin.git", branch = "develop" }
lightning-containers = { git = "ssh://git@192.168.10.134/shisoft-x/Lightning.git", branch = "develop" }
lazy_static = "*"
futures = "0.3"
parking_lot = {version = "0.12", features = ["nightly"]}
tokio = { version = "1.23.0", features = ["full"] }
async-stream = "0.3"
serde = "*"
serde_derive = "*"
log = "0.4"
log4rs = "*"
env_logger = "0.10"
yaml-rust = "*"
serde_yaml = "*"
rand = "0.8"